--- a/.github/workflows/self-update.yml
+++ b/.github/workflows/self-update.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add --all
           git commit -am "Self-update"
+          git fetch
+          git rebase origin/master
           git push
