--- a/.github/workflows/self-update.yml
+++ b/.github/workflows/self-update.yml
@@ -1,7 +1,7 @@
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 19 */1 * * *
+  # schedule:
+  #   - cron: 19 */1 * * *
 
 jobs:
   self-update:
